# lab2_libr

./: CMakeLists.txt  build.sh
examples/: CMakeLists.txt  Makefile  bzip2  bzip2recover
examples/bzip2.dSYM/Contents/: Info.plist
examples/bzip2.dSYM/Contents/Resources/DWARF/: bzip2
examples/bzip2recover.dSYM/Contents/: Info.plist
examples/bzip2recover.dSYM/Contents/Resources/DWARF/: bzip2recover
